--- a/src/app/components/log-form/log-form.component.html
+++ b/src/app/components/log-form/log-form.component.html
@@ -1,3 +1,11 @@
-<p>
-  log-form works!
-</p>
+<div class="card card-body mb-3">
+  <form>
+    <div class="form-group">
+      <label>Title</label>
+      <input type="text" class="form-control" name="title" placeholder="Add a log...">
+    </div>
+    <input type="submit" value="Add Log" class="btn btn-light" [disabled]="!this.text">
+    <button type="button" class="btn btn-warning" [hidden]="!this.text">Clear</button>
+    <!-- <button *ngIf="isEdit" (click)="updatePost()" class="btn btn-warning btn-block">Update Post</button> -->
+  </form>
+</div>
