--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand navbar-dark bg-primary mb-4">
+<nav class="navbar navbar-dark bg-dark mb-3">
   <div class="container">
-    <a class="navbar-brand">Devlogger</a>
+    <a href="/" class="navbar-brand">DevLogger</a>
   </div>
 
 </nav>
