--- a/src/app/components/log-form/log-form.component.html
+++ b/src/app/components/log-form/log-form.component.html
@@ -2,7 +2,7 @@
   <form>
     <div class="form-group">
       <label>Title</label>
-      <input type="text" class="form-control" name="title" placeholder="Add a log...">
+      <input type="text" class="form-control" name="text" placeholder="Add a log..." [(ngModel)]="text">
     </div>
     <input type="submit" value="Add Log" class="btn btn-light" [disabled]="!this.text">
     <button type="button" class="btn btn-warning" [hidden]="!this.text">Clear</button>
