--- a/src/app/components/log-form/log-form.component.html
+++ b/src/app/components/log-form/log-form.component.html
@@ -1,5 +1,5 @@
 <div class="card card-body mb-3">
-  <form>
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label>Title</label>
       <input type="text" class="form-control" name="text" placeholder="Add a log..." [(ngModel)]="text">
