--- a/src/app/components/log-form/log-form.component.html
+++ b/src/app/components/log-form/log-form.component.html
@@ -5,7 +5,7 @@
       <input type="text" class="form-control" name="text" placeholder="Add a log..." [(ngModel)]="text">
     </div>
     <input type="submit" value="Add Log" class="btn btn-light" [disabled]="!this.text">
-    <button type="button" class="btn btn-warning" [hidden]="!this.text">Clear</button>
+    <button (click)="clearState()" type="button" class="btn btn-warning" [hidden]="!this.text">Clear</button>
     <!-- <button *ngIf="isEdit" (click)="updatePost()" class="btn btn-warning btn-block">Update Post</button> -->
   </form>
 </div>
